# research-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  graph.py  llm.py  main.py  schema.py  state.py  tools.py
src/agents/: __init__.py  analyze.py  report.py  search.py
